fix (fellows card): add spacing to fields on fellows card (#108)
- add spacing to the fields on fellow bio card and project card

[Fixes #163048690]

--- a/src/components/FellowBio/FellowBio.css
+++ b/src/components/FellowBio/FellowBio.css
@@ -34,7 +34,7 @@
   height: 30px;
   width: 4px;
   background-color: #ffaf30;
-  margin: 25px 15px 30px 40px;
+  margin: 27px 15px 30px 40px;
 }
 
 .my-bio {
@@ -82,6 +82,8 @@
   font-family: 'DIN Pro';
   font-size: 20px;
   line-height: 26px;
+  padding: 0px 0px 20px 30px;
+  margin: 16px;
 }
 
 .content {
